--- a/css/styles.css
+++ b/css/styles.css
@@ -613,45 +613,47 @@ p {
 .footer-input{
     margin-left: 93px;
 }
-.footer-span{
-    font-family: inherit;
-    font-style: normal;
+.footer-p{
     font-weight: 700;
     font-size: 14px;
     line-height: 1.1428;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
-    display: block;
     margin-bottom: 20px;
 }
+.div-form{
+    display: flex;
+    gap: 12px;
+}
 .footer-input-email{
-    display: block;
     width: 358px;
-    height: 50px;
-    background-color: transparent;
+    background:#2F303A;
     cursor: pointer;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     padding-left: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input-email::placeholder{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    color: rgba(255, 255, 255, 0.6);
 }
 .footer-input-email:hover,
 .footer-input-email:focus{
-    border: 1px solid rgba(255, 255, 255, 0.3);
-}
-.footer-btn-subscribe{
-    display: ;
+    border-color: 1px solid rgba(255, 255, 255, 0.3);
 }
 .footer-button{
-    padding: 10px 52px;
+    padding: 10px 28px;
     margin: auto;
-    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.875;
-    display: inline;
     align-items: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
@@ -659,6 +661,11 @@ p {
     border-radius: 4px;
     border: none;
     cursor: pointer;
+    display: flex;
+    gap: 10px;
+}
+.footer-button-icon{
+    fill: #FFFFFF;
 }
 /*------------------------------ Портфоліо ------------------------ */
 .btn-list{
@@ -801,6 +808,10 @@ p {
 .backdrop.is-hidden .modal{
     transform: translate(-50% -50%) scale(0);
 }
+.modal-close:hover,
+.modal-close:focus{
+    fill: #2196F3;
+}
 .modal-close{
     position: absolute;
     right: 10px;
@@ -813,10 +824,7 @@ p {
     align-items: center;
     justify-content: center;
     background-color: transparent;
-}
-.modal-close:hover,
-.modal-close:focus{
-    color: red;
+    cursor: pointer;
 }
 .is-hidden{
     opacity: 0;
@@ -827,30 +835,60 @@ p {
     font-size: 20px;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     line-height: 23px;
     letter-spacing: 0.03em;
     color: #212121;
 }
 .modal-input{
     width: 100%;
-    height: 40px;
+    height: 45px;
     border-radius: 4px;
+    font-size: 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     background-color: transparent;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     cursor: pointer;
+    padding-left: 36px;
+}
+.modal-input:focus + .modal-icon {
+    fill: #2196F3;
+    border-color: 1px solid #2196F3;
+}
+.modal-input:hover + .modal-icon {
+    fill: #2196F3;
+    border-color: 1px solid #2196F3;
 }
 .modal-label{
+    display: block;
+    position: relative;
     font-family: inherit;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.1666;
     letter-spacing: 0.01em;
     color: #757575;
-    margin-bottom: 10px;
 }
-
+.modal-icon{
+    position: absolute;
+    top: 53%;
+    left: 5px;
+    transform: translateY(-53%);
+    display: inline-block;
+    margin-left: 10px;
+}
+.comment-div{
+    margin-bottom: 20px;
+}
+.checkbox-div{
+    align-items: center;
+    margin-bottom: 30px;
+}
+textarea{
+    resize: none;
+    width: 100%;
+    padding: 12px 16px;
+}
 /* ------------------------- CheckBox ----------------------- */
 .checkbox{
     background-color: #212121;
