--- a/css/styles.css
+++ b/css/styles.css
@@ -794,15 +794,16 @@ p {
     transition: opacity 250ms linear, visibility 250ms linear;
 }
 .modal{
-    width: 500px;
-    min-height: 550px;
     position: absolute;
+    width: 528px;
+    min-height: 581px;
     background-color: #FFFFFF;
-    border-radius: 5px;
+    border-radius: 4px;
     top: 50%;
     left: 50%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transform: translate(-50%, -50%) scale(1);
-    transition: transform 250ms linear;
+    transition: transform 500ms linear;
     padding: 40px;
 }
 .backdrop.is-hidden .modal{
@@ -825,11 +826,18 @@ p {
     justify-content: center;
     background-color: transparent;
     cursor: pointer;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden{
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+.form-field{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
 }
 .modal-title{
     font-size: 20px;
@@ -848,50 +856,100 @@ p {
     border: 1px solid rgba(33, 33, 33, 0.2);
     background-color: transparent;
     margin-bottom: 10px;
-    cursor: pointer;
     padding-left: 36px;
 }
-.modal-input:focus + .modal-icon {
-    fill: #2196F3;
-    border-color: 1px solid #2196F3;
-}
-.modal-input:hover + .modal-icon {
-    fill: #2196F3;
-    border-color: 1px solid #2196F3;
-}
 .modal-label{
-    display: block;
-    position: relative;
     font-family: inherit;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.1666;
     letter-spacing: 0.01em;
     color: #757575;
+    margin-bottom: 4px;
+}
+.form-input-wrap{
+    position: relative;
+}
+.form-input{
+    width: 100%;
+    padding: 11px 12px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-input:focus {
+    border-color: #2196F3;
+}
+.form-user-input{
+    height: 40px;
+    padding-left: 42px;
 }
 .modal-icon{
     position: absolute;
-    top: 53%;
-    left: 5px;
-    transform: translateY(-53%);
-    display: inline-block;
-    margin-left: 10px;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.comment-div{
-    margin-bottom: 20px;
-}
-.checkbox-div{
-    align-items: center;
-    margin-bottom: 30px;
-}
-textarea{
-    resize: none;
-    width: 100%;
+.form-user-comment{
+    height: 120px;
     padding: 12px 16px;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ------------------------- CheckBox ----------------------- */
-.checkbox{
+.policy-label{
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    font-size: 14px;
+    line-height: 1.7142;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.visually-hiddenn{
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+.policy-icon{
+    fill: #FFFFFF;
+    border: 2px solid #212121;
+    border-radius: 2px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-link{
+    position: relative;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.7142;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+}
+.checkbox-link::after{
+    content: "";
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    width: 100%;
+    height: 1px;
     background-color: #212121;
+}
+/* .checkbox{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute;
 }
 .checkbox-label{
     font-family: inherit;
@@ -909,7 +967,7 @@ textarea{
     line-height: 1.7142;
     letter-spacing: 0.03em;
     color: #2196F3;
-}
+} */
 /* -------------------------- Modal Button ------------------*/
 .modal-button{
     padding: 10px 52px;
