--- a/css/styles.css
+++ b/css/styles.css
@@ -515,9 +515,9 @@ p {
     align-items: baseline;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 1200px;
+    gap: 10px;
 }
 .logo-link.ftr{
     display: block;
@@ -628,8 +628,9 @@ p {
 }
 .footer-input-email{
     width: 358px;
-    background:#2F303A;
-    cursor: pointer;
+    background-color:#2F303A;
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 16px;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -637,16 +638,6 @@ p {
     padding-top: 15px;
     padding-bottom: 15px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-input-email::placeholder{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.25;
-    color: rgba(255, 255, 255, 0.6);
-}
-.footer-input-email:hover,
-.footer-input-email:focus{
-    border-color: 1px solid rgba(255, 255, 255, 0.3);
 }
 .footer-button{
     padding: 10px 28px;
@@ -658,6 +649,8 @@ p {
     letter-spacing: 0.06em;
     color: #FFFFFF;
     background-color: #2196F3;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 4px;
     border: none;
     cursor: pointer;
